--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="icon.png">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 </head>
 
 <body>
+<header>
+    <!-- <h1>Tom Andersson</h1> -->
+</header>
+<div id="content">
+    <section id="main">
 
+    </section>
+</div>
+<footer>
+
+</footer>
 </body>
 
 </html>
