--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 </header>
 <div id="content">
     <section id="main">
-
+        <div id="center">
+            <h3>Tom Andersson</h3>
+            <i>"Change the world, one line of code at a time!"</i>
+        </div>
     </section>
 </div>
 <footer>
