Added pics, got to know parallax scrolling

--- a/index.html
+++ b/index.html
@@ -9,26 +9,50 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 </head>
 
 <body>
-<header>
-    <!-- <h1>Tom Andersson</h1> -->
+    <!-- <header>
+    <h1>Tom Andersson</h1>
 </header>
 <div id="content">
-    <section id="main">
-        <div id="center">
-            <h3>Tom Andersson</h3>
-            <i>"Change the world, one line of code at a time!"</i>
-        </div>
-    </section>
+  
 </div>
 <footer>
+</footer> -->
+    <!-- <h1>Haad</h1>
+    <section class="paralax">
+        <div id="paralax-inner">
+            <h2>odfh</h2>
+            <h2>odfh</h2>
+            <h2>odfh</h2>
+            <h2>odfh</h2>
+            <h2>odfh</h2>
+            <h2>odfh</h2>
+        </div>
+    </section>
+    <h1>hej</h1> -->
+    <section class="paralax">
+        <section id="inner-paralax">
+            <div id="center">
+                <h1>Tom Andersson</h1>
+                <i>"Change the world, one line of code at a time!"</i>
+            </div>
+        </section>
+    </section>
+    <section class="paralax-1">
+        <section id="inner-paralax">
 
-</footer>
+        </section>
+    </section>
+    <!-- <section class="paralax">
+
+    </section>-->
 </body>
 
 </html>
