--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <div id="counter">
+        <div id="currentPage">
+        </div>
+        <svg height="10" width="30">
+            <line x1="0" y1="0" x2="30" y2="0" style="stroke:rgb(0,0,0);stroke-width:5" />
+        </svg>
+        <h3>3</h3>
+    </div>
     <section class="paralax">
         <section id="inner-paralax">
             <div id="center">
@@ -26,6 +34,11 @@
         </section>
     </section>
     <section class="paralax-1">
+        <section id="inner-paralax">
+            <h1>About me</h1>
+        </section>
+    </section>
+    <section class="paralax-2">
         <section id="inner-paralax">
 
         </section>
