Worked on menu but was to tierd

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 </head>
-
+<!--Icons used made by Ilya Garmash https://www.iconfinder.com/0pium-->
 <body>
     <div id="counter">
         <div id="currentPage">
@@ -24,6 +24,14 @@
             <line x1="0" y1="0" x2="30" y2="0" style="stroke:rgb(0,0,0);stroke-width:5" />
         </svg>
         <h3>3</h3>
+    </div>
+    <div id="menu">
+        <input type="image" src="pics/menuBtnImg.png" name="menuBtn" class="btnMenuClass" id="menuBtn" onclick="displayMenu()" />
+        <div id="dropdown-content">
+            <input type="image" src="pics/information.png" name="infoBtn"/>
+            <input type="image" src="pics/creativework.png" name="creativeBtn"/>
+            <input type="image" src="pics/contactme.png" name="contactMe"/>
+        </div>
     </div>
     <section class="paralax">
         <section id="inner-paralax">
